2002-02-05  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSString.m: ([-rangeOfCharacterFromSet:options:range:])
	fix to return NSNotFound as location if character not present -
	bug reported by Nicola Pero.

2002-02-04  Richard Frith-Macdonald <rfm@gnu.org>

	* Tools/gsdoc.m: loader() if entity id is missing, try to load url as
	a file.
	* Tools/AGSParser.m: Fixes for handling typedefs, constants, varibales
	and functions.
	* Tools/AGSOutput.[hm]: ditto
	* Tools/AGSHtml.m: ditto
	Preliminary support for C language added.

2002-02-03  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/GNUmakefile: use -WordMap flag with autogsdoc to cope with
	C-preprocessor constants that would otherwise confuse parsing.
	* Source/NSDictionary.m: Tidy to match interface.
	* Source/NSDistantObject.m: Tidy to match interface.
	* Source/NSPortCoder.m: Tidy to match interface.
	* Source/NSScanner.m: Tidy to match interface.  Remove some illegal
	semicolons after method names.
	* Source/NSTimer.m: Tidy to match interface.
	* Tools/AGSParser.h: Handle word mappings.
	* Tools/AGSParser.m: Handle word mappings and deal with function
	attributes.
	* Tools/autogsdoc.m: Handle word mappings and make default logging
	less verbose.

2002-02-02  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSObject.m: Fix some maptable problems when using non-local
	reference counts.
	* Source/NSMapTable.m: Improve warning logging for dodgy practices.
	* Source/NSHashTable.m: ditto
	* Tools/AGSHtml.m: A couple of minor fixes for systems where the xml
	parser does not discard whitespace as it should.

2002-02-01  Richard Frith-Macdonald <rfm@gnu.org>

	* Documentation/manual: New directory containing Objective-C and
	GNUstep-base programming manual/tutorial produced at Brainstorm.
	The intention was to produce a pretty complete manual and then
	release it, but we ran out of funding, so I'm releasing the work
	to date.
	* Source/NSObject.m: Go back to using local refcounts now that new